[package]
authors = ["Hilan Meyran <hilanmeyran@proton.me>"]
description = "CLI tool that convert a GitHub repository to a mermaid(Gitgraph) visualization"
name = "tántalos"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ShawnHeyli/Tantalos"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
git2 = "0.14.4"